tests/baselines/reference/conditionalExportsResolutionFallbackNull(moduleresolution=bundler).errors.txt
/index.mts(1,16): error TS2307: Cannot find module 'dep' or its corresponding type declarations.


==== /node_modules/dep/package.json (0 errors) ====
    {
      "name": "dep",
      "version": "1.0.0",
      "exports": {
        ".": {
            "import": null,
            "types": "./dist/index.d.ts"
        }
      }
    }
    
==== /node_modules/dep/dist/index.d.ts (0 errors) ====
    export {};
    
==== /index.mts (1 errors) ====
    import {} from "dep"; // Cannot find module 'dep'.
                   ~~~~~
!!! error TS2307: Cannot find module 'dep' or its corresponding type declarations.